--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,21 @@
     <link rel="icon" href="%PUBLIC_URL%/Allwin_favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="author" content="Allwin">
+<meta name="og:title" content="Portfolio">
+<meta name="og:description" content="Explore Allwin's portfolio showcasing web development projects and more.">
+
+<!-- Google Analytics -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTWSFCW9PQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZTWSFCW9PQ');
+</script>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Allwin's Software Wizardry</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
